# codechefsrm

./: LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  run.sh  run_server_tests.sh
.github/workflows/: run_tests.yml
client/: package-lock.json
client/public/: index.html
client/src/: App.js  index.css  index.js
client/src/Components/Aboutpage/: Aboutpage.css  Aboutpage.js
client/src/Components/Adminpage/: Adminpage.css  Adminpage.js  Adminsignup.js
client/src/Components/Alert/: Alert.css  Alert.js
client/src/Components/ContactPage/: ContactPage.css  ContactPage.js
client/src/Components/Domains/: Domains.css  Domains.js
client/src/Components/EventsPage/: EventsPage.css  EventsPage.js
client/src/Components/Footer/: Footer.css  Footer.js
client/src/Components/Homepage/: Homepage.css  Homepage.js
client/src/Components/Navbar/: Navbar.css  Navbar.js
client/src/Components/TeamPage/: TeamPage.css  TeamPage.js
server/: __init__.py  logger.py  main.py  schedule_jobs.py  test_runner.py
server/api/: __init__.py  definitions.py  errors.py  exception_handlers.py  utils.py  view.py
server/authentication/: __init__.py  errors.py  middleware.py  token_auth.py  utils.py
server/errors/: __init__.py  auth_errors.py  data_error.py  duplicate_errors.py
server/models/: __init__.py  errors.py  model.py  transactions.py  utils.py
server/tests/: base.py  test_about_us.py  test_access_refresh.py  test_admin_login.py  test_admin_register.py  test_contact_us.py  test_events.py  test_me.py  test_team.py
(+12 files in other folders)
